# persona-pad

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  render.yaml
backend/: .env.example  .vercelignore  CHANGELOG.md  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: main.py  schemas.py
backend/app/data/: persona_vk.json  vk_style_profile.md
backend/app/data/persona/van_keith/: email.md  examples.json  identity.md  lexicon.md  persona.json  policies.md  profile.md  voice.md
backend/app/data/persona/van_keith/bio/: background.md  canonical-answers.md  challenges.md  contact.md  projects.md
backend/app/data/persona/van_keith/channels/: email.md  professional.md  raw.md  short.md
backend/app/data/persona/van_keith/domains/: assistant.md  business.md  car-sales.md  engineering.md  job-search.md  negotiation.md  relationship.md  sylent.md
backend/app/personas/van_keith/: examples.json  persona.json
backend/app/personas/van_keith/bio/: background.md  facts.json  projects.md
backend/app/personas/van_keith/channels/: email.md  professional.md  raw.md  short.md
backend/app/personas/van_keith/domains/: ai_philosophy.md  assistant.md  business.md  engineering.md  job_search.md  relationships.md
backend/app/personas/van_keith/voice/: identity.md  lexicon.md  mechanics.md
backend/app/services/: example_selector.py  persona_engine.py
backend/tests/: test_persona_engine.py
frontend/: .env.example  .env.production  CHANGELOG.md  README.md  index.html  (+4 more)
(+33 files in other folders)
