[tool.poetry]
name = "persona-pad-backend"
version = "0.4.0"
description = "FastAPI backend for PersonaPad"
authors = ["Van Keith <itsvankeith@gmail.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
"uvicorn" = { extras = ["standard"], version = "^0.32" }
pydantic = "^2.9"
openai = ">=1.50,<2"
python-dotenv = "^1.0"
numpy = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
